[gd_scene load_steps=4 format=3 uid="uid://d2mdkym42nvj5"]

[ext_resource type="PackedScene" uid="uid://b8ubpugsly5cp" path="res://scenes/ui/item_slot/item_slot.tscn" id="1_7l8ns"]
[ext_resource type="Script" path="res://scenes/ui/inventory_dialog/inventory_dialog.gd" id="1_phpgd"]
[ext_resource type="PackedScene" uid="uid://ipwdnh2thwcy" path="res://scenes/ui/item_grid/item_grid.tscn" id="3_vclc7"]

[node name="InventoryDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phpgd")
slot_scene = ExtResource("1_7l8ns")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "背包"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="GridContainer" parent="VBoxContainer" instance=ExtResource("3_vclc7")]
unique_name_in_owner = true
layout_mode = 2
